working on the looping to generate pw

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <span class="slider"></span>
           </label><br><br>
 
-          <button type="button"class="btn btn-danger">Generate Password</button>
-            <button type="button"class="btn btn-secondary">Copy to Clipboard</button>
+          <button type="button" id="genBtn" class="btn btn-danger">Generate Password</button>
+            <button type="button" id="copyBtn" class="btn btn-secondary">Copy to Clipboard</button>
            
         </div>
     </div>
