--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
          
           <div id="bar" style="border-top:2px solid #ccc; col-md-10"></div>
          
-          <label class="switch">
+          <!-- <label class="switch">
             <input type="checkbox" checked>
             <span class="slider"></span>
-          </label><br><br>
+          </label><br><br> -->
 
           <button type="button" id="genBtn" class="btn btn-danger">Generate Password</button>
             <button type="button" id="copyBtn" class="btn btn-secondary">Copy to Clipboard</button>
